[metadata]
name = sparrow
version = 0.0.1
#license = <license name, e.g. MIT>
description = Synthesis Planner and Rewards-based Route Optimization Workflow # change to something more detailed 
# long_description = file: README.md, need to add 
#author = 
#author_email = 
# classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
#install_requires =
#   numpy
#   pandas
#   joblib

[options.packages.find]
where=src