[metadata]
name = sparrow
version = 0.0.1
#license = <license name, e.g. MIT>
description = Synthesis Planner and Rewards-based Route Optimization Workflow # change to something more detailed 
long_description = file: README.md
long_description_content_type = text/markdown
author = Jenna Fromer
author_email = jfromer@mit.edu


[options]
packages = find:
package_dir =
    =src
include_package_data = True
# install_requires =
#     askcos@file://localhost/home/jfromer/sparrow/
# ^ comment this line if no askcos access, and rename file location if available 


[options.packages.find]
where=src
