[metadata]
name = sparrow
version = 0.0.1
license = MIT
description = Synthesis Planning And Rewards-based Route Optimization Workflow
long_description = file: README.md
long_description_content_type = text/markdown
author = Jenna Fromer
author_email = jfromer@mit.edu


[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.entry_points]
console_scripts = 
	sparrow = sparrow.cli.run:run

[options.packages.find]
where=src
